--- a/views/socios.xml
+++ b/views/socios.xml
@@ -1,7 +1,7 @@
 <odoo>
   <data>
-    <record model="ir.ui.view" id="cdpelotas3763_y.list">
-      <field name="name">CDPELOTAS3763Y list</field>
+    <record model="ir.ui.view" id="cdpelotas3763_y.list_socios">
+      <field name="name">CDPELOTAS3763Y.socios.tree</field>
       <field name="model">cdpelotas3763_y.socios</field>
       <field name="arch" type="xml">
         <tree>
@@ -14,17 +14,20 @@
       </field>
     </record>
   <record model="ir.ui.view" id="cdpelotas3763_y.list_form">
-      <field name="name">CDPELOTAS3763Y form</field>
+      <field name="name">CDPELOTAS3763Y.socios.form</field>
       <field name="model">cdpelotas3763_y.socios</field>
       <field name="arch" type="xml">
         <form>
           <sheet>
             <div><h1>Alta de Socios</h1></div>
-            <field name="num_socio"/>
-            <field name="nombre"/>
-            <field name="direccion"/>
-            <field name="telefono"/>
-            <field name="fecha_alta"/>
+            <group colspan="2" col="2">
+              <field name="num_socio"/>
+              <field name="nombre"/>
+              <field name="direccion"/>
+              <field name="telefono"/>
+              <field name="fecha_alta"/>
+            </group>
+            
           </sheet>
         </form>
       </field>
@@ -53,7 +56,7 @@
     <menuitem name="CDPELOTAS3763Y" id="cdpelotas3763_y.menu_root"/>
     <!-- menu categories -->
     <menuitem name="Socios" id="cdpelotas3763_y.socios" parent="cdpelotas3763_y.menu_root"/>
-    <!--<menuitem name="Menu 2" id="cdpelotas3763_y.menu_2" parent="cdpelotas3763_y.menu_root"/>-->
+    <menuitem name="Menu 2" id="cdpelotas3763_y.menu_socios_list" parent="cdpelotas3763_y.menu_root"/>
     <!-- actions -->
     
     <!-- <menuitem name="List" id="cdpelotas3763_y.menu_1_list" parent="cdpelotas3763_y.menu_1"
