--- a/views/socios.xml
+++ b/views/socios.xml
@@ -41,13 +41,13 @@
     <!-- Top menu item -->
     <menuitem name="CDPELOTAS3763Y" id="cdpelotas3763_y.menu_root"/>
     <!-- menu categories -->
-    <menuitem name="Socios" id="cdpelotas3763_y.socios" parent="cdpelotas3763_y.menu_root"/>
-    <menuitem name="Menu 2" id="cdpelotas3763_y.menu_socios_list" parent="cdpelotas3763_y.menu_root"/>
+    <menuitem name="Socios" id="cdpelotas3763_y.socios" parent="cdpelotas3763_y.menu_root" action="cdpelotas3763_y.action_window">
+    <!-- <menuitem name="Menu 2" id="cdpelotas3763_y.menu_socios_list" parent="cdpelotas3763_y.menu_root"/> -->
     <!-- actions -->
     
     <!-- <menuitem name="List" id="cdpelotas3763_y.menu_1_list" parent="cdpelotas3763_y.menu_1"
-              action="cdpelotas3763_y.action_window"/>
-    <menuitem name="Server to list" id="cdpelotas3763_y" parent="cdpelotas3763_y.menu_2"
+              action="cdpelotas3763_y.action_window"/> -->
+   <!-- <menuitem name="Server to list" id="cdpelotas3763_y" parent="cdpelotas3763_y.menu_2"
               action="cdpelotas3763_y.action_server"/> -->
    
   </data>
