--- a/views/socios.xml
+++ b/views/socios.xml
@@ -41,7 +41,7 @@
     <!-- Top menu item -->
     <menuitem name="CDPELOTAS3763Y" id="cdpelotas3763_y.menu_root"/>
     <!-- menu categories -->
-    <menuitem name="Socios" id="cdpelotas3763_y.socios" parent="cdpelotas3763_y.menu_root" action="cdpelotas3763_y.action_window">
+    <menuitem name="Socios" id="cdpelotas3763_y.socios" parent="cdpelotas3763_y.menu_root" action="cdpelotas3763_y.action_window"/>
     <!-- <menuitem name="Menu 2" id="cdpelotas3763_y.menu_socios_list" parent="cdpelotas3763_y.menu_root"/> -->
     <!-- actions -->
     
