--- a/views/socios.xml
+++ b/views/socios.xml
@@ -7,6 +7,7 @@
         <tree>
           <field name="num_socio"/>
           <field name="nombre"/>
+          <field name="apellidos"/>
           <field name="direccion"/>
           <field name="telefono"/>
           <field name="fecha_alta"/>
@@ -23,6 +24,7 @@
             <group colspan="2" col="2">
               <field name="num_socio"/>
               <field name="nombre"/>
+              <field name="apellidos"/>
               <field name="direccion"/>
               <field name="telefono"/>
               <field name="fecha_alta"/>
