--- a/views/instalaciones.xml
+++ b/views/instalaciones.xml
@@ -11,6 +11,7 @@
           <field name="luz"/>
           <field name="precio"/>
           <field name="estado"/>
+          <field name="instalaciones_asociadas"/>
         </tree>
       </field>
     </record>
@@ -28,6 +29,7 @@
                 <field name="luz"/>
                 <field name="precio"/>
                 <field name="estado"/>
+                <field name="instalaciones_asociadas"/>
             </group>
             
           </sheet>
