--- a/views/instalaciones.xml
+++ b/views/instalaciones.xml
@@ -11,7 +11,7 @@
           <field name="luz"/>
           <field name="precio"/>
           <field name="estado"/>
-          <field name="instalaciones_asociadas"/>
+          <field name="deporte_asociado"/>
         </tree>
       </field>
     </record>
@@ -29,7 +29,7 @@
                 <field name="luz"/>
                 <field name="precio"/>
                 <field name="estado"/>
-                <field name="instalaciones_asociadas"/>
+                <field name="deporte_asociado"/>
             </group>
             
           </sheet>
